--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <style>
       body {
         background-color: #f3f4f6;
+        touch-action: pan-x pan-y;
       }
       ::-webkit-scrollbar {
         display: none;
@@ -52,7 +53,8 @@
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
     "vite": "https://esm.sh/vite@^7.2.7",
     "path": "https://esm.sh/path@^0.12.7",
-    "url": "https://esm.sh/url@^0.11.4"
+    "url": "https://esm.sh/url@^0.11.4",
+    "dom-to-image-more": "https://esm.sh/dom-to-image-more@3.2.0"
   }
 }
 </script>
