--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
     "vite": "https://esm.sh/vite@^7.2.7",
     "path": "https://esm.sh/path@^0.12.7",
-    "url": "https://esm.sh/url@^0.11.4"
+    "url": "https://esm.sh/url@^0.11.4",
+    "html-to-image": "https://esm.sh/html-to-image@1.11.11"
   }
 }
 </script>
@@ -60,7 +61,6 @@
 </head>
   <body>
     <div id="root"></div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
