feat: Update app name and improve layout stability
Refactors the application name to "衔书又止" across various components and metadata. Implements layout stability by setting `html`, `body`, and `#root` to `height: 100%`, `width: 100%`, and `overflow: hidden`. This ensures a consistent and fixed layout, particularly addressing potential scrolling issues on mobile devices. The viewport meta tag is also updated to prevent scaling on mobile.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>衔书又止</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,13 +30,21 @@
       }
     </script>
     <style>
-      body {
+      html, body {
+        height: 100%;
+        width: 100%;
+        overflow: hidden;
+        position: fixed; /* Prevent bouncy scroll on iOS */
         background-color: #f3f4f6;
+      }
+      #root {
+        height: 100%;
+        width: 100%;
       }
       ::-webkit-scrollbar {
         display: none;
       }
-      html, body, * {
+      * {
         -ms-overflow-style: none;
         scrollbar-width: none;
       }
