--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <style>
       html {
         font-size: 16px; /* Fix root font size for consistent rem units */
-        -webkit-text-size-adjust: 100%; /* Prevent iOS text inflation */
-        text-size-adjust: 100%;
+        -webkit-text-size-adjust: none; /* Prevent iOS/Android text inflation completely */
+        text-size-adjust: none;
       }
       body {
         height: 100%;
