--- a/index.html
+++ b/index.html
@@ -30,13 +30,16 @@
       }
     </script>
     <style>
-      /* Use !important to override Tailwind's preflight styles which set this to 100% */
-      html {
-        font-size: 16px;
+      /* Aggressively disable text inflation on ALL elements */
+      html, body, #root, * {
         -webkit-text-size-adjust: none !important;
         -moz-text-size-adjust: none !important;
         -ms-text-size-adjust: none !important;
         text-size-adjust: none !important;
+      }
+      
+      html {
+        font-size: 16px;
         height: 100%;
         touch-action: manipulation;
       }
@@ -46,10 +49,6 @@
         overflow: hidden;
         position: fixed;
         background-color: #f3f4f6;
-        -webkit-text-size-adjust: none !important;
-        -moz-text-size-adjust: none !important;
-        -ms-text-size-adjust: none !important;
-        text-size-adjust: none !important;
         overscroll-behavior: none;
       }
       #root {
@@ -59,6 +58,7 @@
       ::-webkit-scrollbar {
         display: none;
       }
+      /* Ensure hidden scrollbars everywhere */
       * {
         -ms-overflow-style: none;
         scrollbar-width: none;
