--- a/index.html
+++ b/index.html
@@ -30,16 +30,13 @@
       }
     </script>
     <style>
-      /* Aggressively disable text inflation on ALL elements */
-      html, body, #root, * {
+      /* Use !important to override Tailwind's preflight styles which set this to 100% */
+      html {
+        font-size: 16px;
         -webkit-text-size-adjust: none !important;
         -moz-text-size-adjust: none !important;
         -ms-text-size-adjust: none !important;
         text-size-adjust: none !important;
-      }
-      
-      html {
-        font-size: 16px;
         height: 100%;
         touch-action: manipulation;
       }
@@ -49,6 +46,10 @@
         overflow: hidden;
         position: fixed;
         background-color: #f3f4f6;
+        -webkit-text-size-adjust: none !important;
+        -moz-text-size-adjust: none !important;
+        -ms-text-size-adjust: none !important;
+        text-size-adjust: none !important;
         overscroll-behavior: none;
       }
       #root {
@@ -58,7 +59,6 @@
       ::-webkit-scrollbar {
         display: none;
       }
-      /* Ensure hidden scrollbars everywhere */
       * {
         -ms-overflow-style: none;
         scrollbar-width: none;
