feat: Implement long-text mode and advanced presets
Introduces a new "long-text" mode for the editor, enabling a more robust experience for lengthy content. This includes:
- Setting a default font and ensuring proper text alignment.
- Adding functionality to save, apply, and delete advanced presets for detailed formatting.
- Providing quick actions for generating regex patterns based on user input for text transformation.
- Enhancing the UI for managing and applying these advanced formatting rules.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -30,7 +31,6 @@
       }
     </script>
     <style>
-      /* Use !important to override Tailwind's preflight styles which set this to 100% */
       html {
         font-size: 16px;
         -webkit-text-size-adjust: none !important;
@@ -46,6 +46,8 @@
         overflow: hidden;
         position: fixed;
         background-color: #f3f4f6;
+        /* 设置全局默认字体为思源宋体 */
+        font-family: "Noto Serif SC", serif;
         -webkit-text-size-adjust: none !important;
         -moz-text-size-adjust: none !important;
         -ms-text-size-adjust: none !important;
